--- a/hello_universe.html
+++ b/hello_universe.html
@@ -4,7 +4,7 @@
    <title id="title-tag">Hello universe!</title>
    <script type="text/javascript">
    // Ask the user for his/her honorific title.
-   var title = prompt ( 'Please, enter Ms., Msr. or Mr.:' );
+   var title = prompt ( 'Please, enter Ms., Mrs. or Mr.:' );
    // Ask the user for his/her first name.
    var first_name = prompt ( 'Please, enter your first name:' );
    // Ask the user for his/her last name.
