Update comment for set method.

--- a/storage_basic.html
+++ b/storage_basic.html
@@ -44,7 +44,7 @@
          },
          /** set method to store given data
           * @param {String} key
-          * @param {String} value
+          * @param {Mixed} value
          **/
          set: function ( key, value ) {
             private_storage[key] = value;
